--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <h2>Игра кликер</h2>
-    <h1 id ="score">0$<img src="https://cdn.icon-icons.com/icons2/550/PNG/512/business-color_money-coins_icon-icons.com_53446.png"></h1>
+    <h1 id ="score">0$<img src="img/coins.png"></h1>
     <button id="clickbtn" onclick="clickBtn()">+$</button>
     <br><input type="button" value="Прокачать на 1 уровень|-100$" onclick="update()">
     <br><input type="button" value="Прокачать на 2 уровня|-150$" onclick="update1()">
@@ -19,7 +19,7 @@
     <br><input type="button" value="Прокачать на 10 уровней|-500$" onclick="update3()">
     <br><input type="button" value="Автокликер|-10000$" onclick="auto()">
     <br><input type="button" value="Подробнее" onclick="reboot()">
-    <img src="https://cdn.icon-icons.com/icons2/1091/PNG/512/profits_78367.png" class="img" onclick="pashalka()">
+    <img src="img/profit.png" class="img" onclick="pashalka()">
   </main>
 </body>
   <script  src="./script.js"></script>
