--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Кликер</title>
   <link rel="stylesheet" href="./style.css">
-  <link rel="icon" href="https://img.icons8.com/carbon-copy/100/000000/mouse.png">
+  <link rel="icon" href="img/mouse.png">
 </head>
 <body>
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
