--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <br><input type="button" value="Автокликер|-10000$" onclick="auto()">
     <br><input type="button" value="Подробнее" onclick="reboot()">
     <img src="img/profit.png" class="img" onclick="pashalka()">
-    <a target="_blank" href="https://zen.yandex.ru/media/id/5e7c78ee99d560276a9df6e4/pishim-kliker-na-js-5ecd1799c941f54857bb258c">Пишим кликер</a>
+    <a target="_blank" href="https://zen.yandex.ru/media/id/5e7c78ee99d560276a9df6e4/pishim-kliker-na-js-5ecd1799c941f54857bb258c">Пишем кликер</a>
   </main>
 </body>
   <script  src="./script.js"></script>
